recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:5: error: Non-zero integral values may not have a leading zero.
 avance(100,00)
            ^FourSquare:6: error: Non-zero integral values may not have a leading zero.
 droite(90,00)
           ^FourSquare:5: error: illegal start of simple expression
 avance(100,00)
            ^FourSquare:7: error: ')' expected but '}' found.
 }
 ^