recursion.logo.square.FourSquare.scala.code
override def run() {
  var i:Int = 0
 while (i<4) {
   i += 1
 avance(100,00)
 droite(90,00)
 }
}
